service.yml
kind: Service
apiVersion: v1
metadata:
  name: my-service
spec:
  type: NodePort
  selector:
    app: gotest
  ports:
  - protocol: TCP
    port: 9100
    targetPort: 80
    name: gotest-nodeport-http
  - protocol: TCP
    port: 9443
    targetPort: 443
    name: gotest-nodeport-https
